[build-system]
requires = ["setuptools"]

[project]
name = "m_teng"
version = "1.1.0"
description = "Interactive utility for voltage measurements with a Keitley 2600 SMU or an Arduino"
requires-python = ">=3.10"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    { name = "Matthias Quintern", email = "matthias.quintern@posteo.de" }
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "matplotlib>=3.6",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
keithley = [
    "pyvisa",
    "pyvisa-py"
]
arduino = [
    "bleak >= 0.20"
]


[project.urls]
repository = "https://github.com/MatthiasQuintern/m-teng"


[project.scripts]
m-teng = "m_teng.m_teng_interactive:main"

[tool.setuptools.packages.find]
where = ["."]
